--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ gtag("config", "GT-MRQ2P6V");
 				</div>
 				<div class="elementor-element elementor-element-150e6847 elementor-widget elementor-widget-heading" data-id="150e6847" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">17/01/2024 15h51 Atualizado há 3 horas</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">05/04/2024 15h51 Atualizado</h2>		</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-19f3723d elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="19f3723d" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
